--- a/.github/workflows/CI-MacOS-Universal-Clang.yml
+++ b/.github/workflows/CI-MacOS-Universal-Clang.yml
@@ -20,22 +20,28 @@ jobs:
   macos:
     strategy:
       matrix:
-        python-version: [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11" ]
-    
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '14.2.0'
+          xcode-version: "14.2.0"
 
-      - uses: actions/setup-python@v4
+      - uses: pdm-project/setup-pdm@v3
+        name: Setup PDM
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
+          version: 2.11.1
+          prerelease: false
+          enable-pep582: false
+          allow-python-prereleases: false
+          update-python: true
 
       - name: Check Python version
         run: |
@@ -71,7 +77,6 @@ jobs:
               ..
           cmake --build . -j 4
 
-
       - name: build-x86_64
         run: |
           cd src
@@ -84,34 +89,26 @@ jobs:
               ..
           cmake --build . -j 4
 
-
-      - name: merge-fat-library-py36m
-        if: matrix.python-version == '3.6'
-        run: mkdir -p dist && lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-36m-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-36m-darwin.so -o dist/srmd_ncnn_vulkan_wrapper.cpython-36m-darwin.so
-      - name: merge-fat-library-py37m
-        if: matrix.python-version == '3.7'
-        run: mkdir -p dist && lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-37m-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-37m-darwin.so -o dist/srmd_ncnn_vulkan_wrapper.cpython-37m-darwin.so
       - name: merge-fat-library-py38
         if: matrix.python-version == '3.8'
-        run: mkdir -p dist && lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-38-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-38-darwin.so -o dist/srmd_ncnn_vulkan_wrapper.cpython-38-darwin.so
+        run: lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-38-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-38-darwin.so -o src/srmd_ncnn_py/srmd_ncnn_vulkan_wrapper.cpython-38-darwin.so
       - name: merge-fat-library-py39
         if: matrix.python-version == '3.9'
-        run: mkdir -p dist && lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-39-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-39-darwin.so -o dist/srmd_ncnn_vulkan_wrapper.cpython-39-darwin.so
+        run: lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-39-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-39-darwin.so -o src/srmd_ncnn_py/srmd_ncnn_vulkan_wrapper.cpython-39-darwin.so
       - name: merge-fat-library-py310
         if: matrix.python-version == '3.10'
-        run: mkdir -p dist && lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-310-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-310-darwin.so -o dist/srmd_ncnn_vulkan_wrapper.cpython-310-darwin.so
+        run: lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-310-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-310-darwin.so -o src/srmd_ncnn_py/srmd_ncnn_vulkan_wrapper.cpython-310-darwin.so
       - name: merge-fat-library-py311
         if: matrix.python-version == '3.11'
-        run: mkdir -p dist && lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-311-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-311-darwin.so -o dist/srmd_ncnn_vulkan_wrapper.cpython-311-darwin.so
+        run: lipo -create src/build-arm64/srmd_ncnn_vulkan_wrapper.cpython-311-darwin.so src/build-x86_64/srmd_ncnn_vulkan_wrapper.cpython-311-darwin.so -o src/srmd_ncnn_py/srmd_ncnn_vulkan_wrapper.cpython-311-darwin.so
 
       - name: dist
         run: |
-          cp src/srmd_ncnn_vulkan.py dist
-          cp -r models dist
+          mkdir dist
+          cp -r src/srmd_ncnn_py dist
 
       - name: upload
         uses: actions/upload-artifact@v3
         with:
           name: srmd-ncnn-macos-python${{ matrix.python-version }}
           path: dist
-
