--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/pybind11"]
 	path = src/pybind11
 	url = https://github.com/pybind/pybind11
-[submodule "src/srmd-ncnn-vulkan"]
-	path = src/srmd-ncnn-vulkan
-	url = https://github.com/nihui/srmd-ncnn-vulkan
+[submodule "src/srmd-ncnn-vulkan/src/ncnn"]
+	path = src/srmd-ncnn-vulkan/src/ncnn
+	url = https://github.com/Tencent/ncnn
